--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "smedia",
   "version": "1.0.0",
   "description": "",
+  "engines": {"node":"16.14.2"},
   "main": "server.js",
   "scripts": {
     "start":"node server.js",
@@ -11,7 +12,7 @@
     "client-install":"cd client && npm install",
     "install-all": "concurrently \"npm run server-install\" \"npm run client-install\" ",
     "dev":"concurrently \"npm run server\" \"npm run client\" ",
-    "heroku-postbuild":"cd client && npm-install && npm run build"
+    "heroku-postbuild":"cd client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
