--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "engines": {"node":"16.14.2"},
   "main": "server.js",
   "scripts": {
+    "build": "cd client && npm run build",
     "start":"node server.js",
     "server":"nodemon server.js",
     "client":"cd client && npm run start",
