--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "client-install":"cd client && npm install",
     "install-all": "concurrently \"npm run server-install\" \"npm run client-install\" ",
     "dev":"concurrently \"npm run server\" \"npm run client\" ",
-    "heroku-postbuild":"cd client && npm install && npm run build"
+    "heroku-postbuild":"cd app && cd client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
